tests/neg/i18884.scala
def test(xs: ::[Int]): List[Int] =
  xs.next$access$1 // error
